# fastapi-backend

./: .gitignore  pyproject.toml
fastapi_backend/: __init__.py  __main__.py
fastapi_backend/conf/: __init__.py  default.py  loader.py
fastapi_backend/core/: __init__.py  asgi.py
fastapi_backend/db/: __init__.py  fields.py  manager.py  model.py  models.py  relations.py  session.py
fastapi_backend/db/queryset/: __init__.py  filter.py  joins.py  lookups.py  queryset.py
fastapi_backend/management/: fs.py  fs_tempates.py
fastapi_backend/management/cli/: __init__.py  command.py  commands.py  discover.py
fastapi_backend/management/commands/: createmodule.py  createproject.py
fastapi_backend/modules/: __init__.py  config.py  registry.py
fastapi_backend/utils/: loaders.py  string.py
test/conf/: conftest.py  external_conf.py  test_settings.py
test/management/: test_fs.py
test/test_project/: test_initialization.py
test/test_project/auth/: models.py  modules.py
test/test_project/core/: settings.py
test/test_project/posts/: models.py  modules.py
