[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.13.3",
    "autoregistry>=1.2.1",
    "cyclopts>=4.5.1",
    "fastapi>=0.128.1",
    "inflect>=7.5.0",
    "mako>=1.3.10",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "tortoise-orm>=1.1.0",
]

[dependency-groups]
dev = [
    "django>=6.0.2",
    "ruff>=0.15.0",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
